<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Obnoxx</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="phone_number_to_log_in">To log in, please give your phone number.</string>
    <string name="submit">Submit</string>
    <string name="next_please_enter_verification_code">Next, please enter the verification code.</string>
    <string name="verification_code">Verification code</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone number</string>
    <string name="new_user_welcome">Welcome new user!  Please give yourself a name!</string>
    <string name="new_user_welcome_subtext">Note: User names must start with a letter and cannot
        contain any spaces.</string>
    <string name="user_name">User name</string>
    <string name="create_user">Create user</string>
</resources>
