<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginNewUserFragment"
    android:background="#ccc"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#888"
        android:text="@string/new_user_welcome_subtext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <EditText android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:minWidth="200dp">
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/create_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user" />
    </LinearLayout>
</LinearLayout>