<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verification_code_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginVerificationCodeFragment"
    android:background="#ccc"
    android:padding="20dp">

    <TextView
        android:id="@+id/verification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_please_enter_verification_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <EditText android:id="@+id/verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:inputType="number">
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/verification_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/verification_code_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</LinearLayout>