<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phone_number_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPhoneNumberFragment"
    android:background="#ccc"
    android:padding="20dp">

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_to_log_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <EditText android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number">
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/phone_number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>